[gd_scene load_steps=3 format=2]

[ext_resource path="res://graphics/theme/Menu.theme" type="Theme" id=1]
[ext_resource path="res://ui/menu/LoadGameMenu.gd" type="Script" id=2]

[node name="LoadGameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
margin_left = -10.0
margin_top = -10.0
margin_right = 1290.0
margin_bottom = 730.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -640.0
margin_right = 640.0
margin_bottom = 314.0
text = "Load Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -65.0
margin_right = 250.0
margin_bottom = 65.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldList" type="ItemList" parent="HBoxContainer"]
margin_right = 300.0
margin_bottom = 130.0
rect_min_size = Vector2( 300, 130 )
focus_mode = 0
items = [ "World1", null, false, "World2", null, false, "World3", null, false, "Item 3", null, false, "Item 4", null, false, "Item 5", null, false, "Item 6", null, false, "Item 7", null, false, "Item 8", null, false, "Item 9", null, false, "Item 10", null, false, "Item 11", null, false ]

[node name="ButtonContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 320.0
margin_right = 500.0
margin_bottom = 130.0
custom_constants/separation = 20

[node name="Start" type="Button" parent="HBoxContainer/ButtonContainer"]
margin_right = 180.0
margin_bottom = 53.0
text = "Start"

[node name="Delete" type="Button" parent="HBoxContainer/ButtonContainer"]
margin_top = 73.0
margin_right = 180.0
margin_bottom = 126.0
rect_min_size = Vector2( 180, 0 )
text = "Delete"

[node name="Back" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -100.0
margin_right = -60.0
margin_bottom = -50.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="HBoxContainer/WorldList" to="." method="_on_WorldList_item_selected"]
[connection signal="pressed" from="HBoxContainer/ButtonContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonContainer/Delete" to="." method="_on_Delete_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
